# web_pages_test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  template.env
.github/workflows/: ci.yml
alembic/: __init__.py  env.py
alembic/versions/: 4151a99f7f98_.py  a2e693bb7db0_.py  d2ec60b816de_.py  df0bbd74e781_.py  fd5535258428_.py
src/: __init__.py  database.py  main.py  models.py  validators.py
